get cinemas by city id
